--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "ecommerce",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@stripe/react-stripe-js": "^1.16.5",
-    "@stripe/stripe-js": "^1.47.0",
-    "classnames": "^2.3.2",
+    "@strapi/plugin-i18n": "4.6.1",
+    "@strapi/plugin-users-permissions": "4.6.1",
+    "@strapi/provider-upload-aws-s3": "^4.6.1",
+    "@strapi/provider-upload-cloudinary": "^5.2.0",
+    "@strapi/strapi": "4.6.1",
+    "better-sqlite3": "8.0.1",
     "ecommerce": "file:",
-    "formik": "^2.2.9",
-    "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
-    "luxon": "^3.2.1",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-player": "^2.11.2",
-    "react-slick": "^0.29.0",
-    "sass": "^1.58.2",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
-    "slick-carousel": "^1.8.1",
-    "yup": "^1.0.0"
-  }
+    "pg": "^8.13.1",
+    "sharp": "^0.33.5",
+    "stripe": "^11.10.0"
+  },
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "strapi": {
+    "uuid": "199fbce2-cd98-4f5e-a933-c86efb6f5ac5"
+  },
+  "engines": {
+    "node": ">=14.19.1 <=18.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
